--- a/game/index.html
+++ b/game/index.html
@@ -11,16 +11,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
     <style>
         h1 { 
-            color:red;
+            color:#c4381c;
             font-family: 'Secular One', sans-serif;
-            border-bottom: 1px solid blue;
+            border-bottom: 1px solid rgb(197, 61, 19);
             }
         h2 {
-            color:blue;
+            color:#FF934F;
             font-family: 'Secular One', sans-serif;
             }
         blockquote { 
-            background-color: lightgray;
+            background-color: rgb(218, 160, 137);
             padding: 1rem;
             }
         p {
@@ -31,11 +31,50 @@
             font-family: Arial;
            }
            
-        img.side {float:right; margin: 0 12px;}
+        img.side {float:right; margin: 0 12px; border: 20px solid #611300;}
+
+        a:link
+        {
+            color:#e64626
+        }
+        a:visited
+        {
+            color:#611300;
+        }
+            a:focus
+        {       
+            color:#8d3620
+        }
+        a:hover
+        {
+            color: #d1815b;
+        }
+        a:active
+        {
+         color: #3a1717;
+        }
+
+        main
+        {
+            border: black 1px;
+            margin-top: 0;
+            margin-bottom: 0;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        footer
+        {
+            border: black 1px;
+            margin-top: 0;
+            margin-bottom: 0;
+            margin-left: auto;
+            margin-right: auto;
+        }
             
     </style>
 </head>
-<body style="background-color:#ffe8a8;">
+<body style="background-color:#fceec7;">
 <header>
 
     <img src="images/dig-dug.svg" alt="Dig Dug Logo" width="200" height="66">
